feat: 백엔드에 핫 리로드(--reload) 추가
개발 환경에서 코드 변경 시 자동 재시작되도록 설정

변경 사항:
- compose.dev.yaml: uvicorn에 --reload 플래그 추가
- 코드 수정 시 수동 재시작 불필요
- 개발 생산성 향상

사용법:
docker compose -f compose.dev.yaml up -d
또는
docker compose -f compose.dev.yaml up -d --build

주의:
- 프로덕션에서는 사용하지 않음 (성능 저하)
- 개발 환경(compose.dev.yaml)에만 적용됨

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ./backtest_be_fast:/app
       - backtest_be_fast_venv:/opt/venv
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
   backtest-fe:
     build:
       context: ./backtest_fe
