--- a/backtest_be_fast/requirements.txt
+++ b/backtest_be_fast/requirements.txt
@@ -9,6 +9,7 @@ pandas>=2.0.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz>=2023.3
+python-dateutil>=2.8.2
 
 SQLAlchemy>=2.0
 pymysql>=1.0.2
