--- a/backtest_fe/package.json
+++ b/backtest_fe/package.json
@@ -81,6 +81,7 @@
     "happy-dom": "^20.0.10",
     "jsdom": "^27.0.0",
     "msw": "^2.11.3",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
     "shadcn": "^3.2.1",
     "tailwindcss": "^3.3.0",
