--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -20,7 +20,7 @@ services:
     volumes:
       - ./backtest_be_fast:/app
       - backtest_be_fast_venv:/opt/venv
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4", "--reload"]
   backtest-fe:
     build:
       context: ./backtest_fe
